# simple-llvm-language-compiler

./: .travis.yml  CMakeLists.txt  LLVMIRGeneratorTestExpectedResult.txt  ParserTestExpectedResult.txt  README.md
Source/: CMakeLists.txt
Source/Compiler/: CMakeLists.txt  Main.cpp
Source/CompilingLibrary/: CMakeLists.txt
Source/CompilingLibrary/Generators/ToLLVM/: LLVMGenerator.cpp  LLVMGenerator.hpp
Source/CompilingLibrary/Lexer/: Lexer.cpp  Lexer.hpp
Source/CompilingLibrary/Parser/: AST.cpp  AST.hpp  Parser.cpp  Parser.hpp
Source/Tests/: CMakeLists.txt  Defines.hpp  Defines.hpp.cmake  TestLLVMIRGenerator.cpp  TestLexer.cpp  TestParser.cpp
